Fix calendar partially cropped

--- a/src/js/app/pages/town/town.scss
+++ b/src/js/app/pages/town/town.scss
@@ -95,7 +95,7 @@
     position: relative;
     padding-top: 35px;
     background: #EBEFF3;
-    padding-bottom: 40px;
+    padding-bottom: 100px;
     overflow: hidden;
 }
 
